public static class AnimationParameters
{
    public const string IsIdle = "IsIdle";
    public const string IsWalking = "IsWalking";
    public const string IsRunning = "IsRunning";
    public const string JumpTrigger = "JumpTrigger";
    public const string DoubleJumpTrigger = "DoubleJumpTrigger";
    public const string DashTrigger = "DashTrigger";
    public const string IsGrounded = "IsGrounded";
}